--- a/2019/10-06-imperial.figures/macrostar.tex
+++ b/2019/10-06-imperial.figures/macrostar.tex
@@ -28,45 +28,45 @@
 
   \foreach \i/\j in {0/1, 1/2, 2/3} {
     \foreach \k in {0, 2} {
-      \draw[dof, line join=miter, very thick] (\k-\i) -- (\k-\j);
+      \draw[dof, line join=miter, line width=3pt] (\k-\i) -- (\k-\j);
     }
-    \draw[dof, line join=miter, very thick] (0-\i) -- (1-\i);
-    \draw[dof, line join=miter, very thick] (1-\i) -- (2-\i);
-    \draw[dof, line join=miter, very thick] (0-\j) -- (1-\i);
-    \draw[dof, line join=miter, very thick] (1-\i) -- (2-\j);
+    \draw[dof, line join=miter, line width=3pt] (0-\i) -- (1-\i);
+    \draw[dof, line join=miter, line width=3pt] (1-\i) -- (2-\i);
+    \draw[dof, line join=miter, line width=3pt] (0-\j) -- (1-\i);
+    \draw[dof, line join=miter, line width=3pt] (1-\i) -- (2-\j);
   }
 
   \foreach \i/\j in {0/1, 1/2} {
-    \draw[dof, line join=miter, very thick] (1-\i) -- (1-\j);
+    \draw[dof, line join=miter, line width=3pt] (1-\i) -- (1-\j);
   }
   
   \foreach \i/\j in {0/1, 1/2, 2/3} {
     \coordinate (bc-0-\i-\j) at (barycentric cs:0-\i=1,0-\j=1,1-\i=1);
-    \draw[bcdof, line join=miter, dotted, thick] (0-\i) -- (bc-0-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\i) -- (bc-0-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (0-\j) -- (bc-0-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (0-\i) -- (bc-0-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\i) -- (bc-0-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (0-\j) -- (bc-0-\i-\j);
 
     \coordinate (bc-2-\i-\j) at (barycentric cs:1-\i=1,2-\i=1,2-\j=1);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\i) -- (bc-2-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (2-\i) -- (bc-2-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (2-\j) -- (bc-2-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\i) -- (bc-2-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (2-\i) -- (bc-2-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (2-\j) -- (bc-2-\i-\j);
 
     \foreach \k in {0, 2} {
-      \draw[fill, black!60] (bc-\k-\i-\j) circle (0.03);
+      \draw[fill, black!60] (bc-\k-\i-\j) circle (0.04);
     }
   }
   \foreach \i/\j in {0/1, 1/2} { 
     \coordinate (bc-1-\i-\j)  at (barycentric cs:1-\i=1,0-\j=1,1-\j=1);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\i) -- (bc-1-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (0-\j) -- (bc-1-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\j) -- (bc-1-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\i) -- (bc-1-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (0-\j) -- (bc-1-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\j) -- (bc-1-\i-\j);
 
     \coordinate (bc-3-\i-\j)  at (barycentric cs:1-\i=1,1-\j=1,2-\j=1);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\i) -- (bc-3-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (1-\j) -- (bc-3-\i-\j);
-    \draw[bcdof, line join=miter, dotted, thick] (2-\j) -- (bc-3-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\i) -- (bc-3-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (1-\j) -- (bc-3-\i-\j);
+    \draw[bcdof, line join=miter, dotted, line width=2pt] (2-\j) -- (bc-3-\i-\j);
     \foreach \k in {1, 3} {
-      \draw[fill, black!60] (bc-\k-\i-\j) circle (0.03);
+      \draw[fill, black!60] (bc-\k-\i-\j) circle (0.04);
     }
   }
 
@@ -79,7 +79,7 @@
 
   %   \draw[fill, black!40] (bc-3-0-1) circle (0.1);
   % \end{scope}
-  \draw[dashed, blue, very thick] ([shift={(0:5pt)}]1-0) --
+  \draw[dashed, blue, line width=3pt] ([shift={(0:5pt)}]1-0) --
   ([shift={(60:5pt)}]0-1) --
   ([shift={(120:5pt)}]0-2) --
   ([shift={(180:5pt)}]1-2) --
