Sketch out shape of talk

--- a/2019/03-07-oxford-computational-maths.tex
+++ b/2019/03-07-oxford-computational-maths.tex
@@ -199,7 +199,7 @@ backend=biber]{biblatex}
       \end{quote}
     \end{column}
     \begin{column}{0.2\textwidth}
-      \includegraphics[width=0.8\textwidth]{firedrake-small}
+      \includegraphics[width=0.8\textwidth]{firedrake}
     \end{column}
   \end{columns}
   \begin{itemize}
